[package]
name = "minefinder2"
version = "0.1.0"
authors = ["Michael Ryan <mxryan@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.39"
wasm-bindgen = "0.2.62"
console_error_panic_hook = "0.1.6"
#getrandom = "0.1.14"

[dependencies.getrandom]
version = "0.1.14"
features = [
    'wasm-bindgen'
]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'MouseEvent'
]

[lib]
crate-type = ["cdylib"]